unit tests for ObjectMethods